objects/SGR_Event_Log__c.object
<CustomObject>
    <fields>
        <fullName>Account_ID__c</fullName>
        <label>Account ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_ID__c</fullName>
        <label>Batch ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Log_Message__c</fullName>
        <label>Log Message</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Info</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event Log</label>
    <nameField>
        <label>Event Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>